--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "build": "vercel build",
+    "postinstall": "npm install --legacy-peer-deps"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.0",
-    "cloudinary": "^2.2.0",
+   
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -29,9 +31,11 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
+
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "cloudinary": "^2.2.0",
+    "multer-storage-cloudinary": "^4.0.0"
   }
 }
