--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node index.js",
     "build": "vercel build",
-    "postinstall": "npm install --legacy-peer-deps"
+    "postinstall": "npm install --force"
   },
   "keywords": [],
   "author": "",
