--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "build": "vercel build",
-    "postinstall": "npm install --legacy-peer-deps"
+    "build": "vercel build"
   },
   "keywords": [],
   "author": "",
