--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "build": "vercel build"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
